--- a/css/style.css
+++ b/css/style.css
@@ -226,11 +226,7 @@ footer > p{
     margin-right: 10px;
 }
 
-#tipoRetificador1 {
-    margin-right: 10px;
-}
-
-#tipoRetificador2 {
+.tiposRetificadores {
     margin-right: 10px;
 }
 
@@ -242,6 +238,25 @@ footer > p{
 
 .imagem-circuito1 {
     margin-left: 25px;
+}
+
+/* Página de Sistemas Digitais */
+
+.divBotao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.botaoCriaCircuitos {
+    border-radius: 15px;
+    padding: 15px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-size: 30px;
+    font-weight: bold;
+    background-color: var(--cor1);
+    text-align: center;
 }
 
 .desenhoCircuito {
